version 0.1 搭建项目骨架，初步实现订单查询，状态机